# ProteinWorkshop

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  LICENSE  README.md  citation.bib  dev.ipynb  environment.yaml  framework.html  genindex.html  hparams.ipynb  index.html  installation.html  ml_components.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.py  tutorials.html
.doctrees/: framework.doctree  index.doctree  installation.doctree
.doctrees/configs/: metrics.doctree  transforms.doctree
.doctrees/modules/: proteinworkshop.constants.doctree  proteinworkshop.metrics.doctree  proteinworkshop.train.doctree  proteinworkshop.types.doctree  proteinworkshop.utils.doctree
.doctrees/quickstart_component/: download.doctree  downstream.doctree
.github/workflows/: code-tests.yaml  docs-check.yaml
_modules/: index.html
_modules/proteinworkshop/: train.html  utils.html
_modules/src/: train.html
_sources/: index.rst.txt  installation.rst.txt  overview.rst.txt  quickstart.rst.txt  tutorials.rst.txt
_sources/configs/: dataset.rst.txt  features.rst.txt  model.rst.txt  task.rst.txt
_sources/modules/: src.features.rst.txt  src.metrics.rst.txt  src.models.rst.txt  src.tasks.rst.txt  src.utils.rst.txt
_sources/quickstart_component/: downstream.rst.txt  pretrain.rst.txt
configs/: aux_task.html  dataset.html  embed.yaml  eval.yaml  features.html  finetune.yaml  metrics.html  model.html  task.html  template.yaml  templates.html  train.yaml  transforms.html
configs/aux_task/: README.md  nn_structure_r3.yaml
configs/callbacks/: early_stopping.yaml  ema.yaml  model_checkpoint.yaml
configs/dataset/: a_thaliana.yaml  afdb_swissprot_v4.yaml  antibody_developability.yaml  astral.yaml  atom3d_msp.yaml  atom3d_ppi.yaml  atom3d_psr.yaml  atom3d_res.yaml  c_elegans.yaml  cath.yaml  ccpdb_ligands.yaml  ccpdb_metal.yaml  ccpdb_nucleic.yaml  ccpdb_nucleotides.yaml  deep_sea_proteins.yaml  dummy.yaml  e_coli.yaml  ec_reaction.yaml  esmatlas.yaml  fold_family.yaml  fold_fold.yaml  fold_superfamily.yaml  go-bp.yaml  go-cc.yaml  go-mf.yaml  highquality_clust30.yaml  m_jannaschii.yaml  masif_site.yaml  metal_3d.yaml  o_sativa.yaml  pdb.yaml  ptm.yaml  r_norvegicus.yaml  s_cerevisiae.yaml
configs/debug/: default.yaml
configs/decoder/: b_factor.yaml  dihedrals.yaml  edge_distance.yaml  graph_label.yaml  node_label.yaml  pos.yaml  pos_equiv.yaml  residue_type.yaml  torsional_noise.yaml
configs/encoder/: dimenet_plus_plus.yaml  egnn.yaml  gcn.yaml  gcpnet.yaml  gear_net.yaml  gear_net_edge.yaml  gvp.yaml  identity.yaml  mace.yaml  mpnn.yaml  schnet.yaml  tfn.yaml
configs/env/: default.yaml
configs/extras/: default.yaml
configs/features/: all_equivariant_ca.yaml  all_invariant_ca.yaml  ca.yaml  ca_angles.yaml  ca_base.yaml  ca_bb.yaml  (+2 more)
docs/: .docs.requirements  emojize.py  framework.html  index.html  installation.html  ml_components.html  overview.html  quickstart.html  render_emojis.sh  search.html  searchindex.js  tutorials.html
iclr_2024/: bibliography.bib  iclr2024_conference.sty  iclr2024_conference.tex  math_commands.tex
modules/: proteinworkshop.constants.html  proteinworkshop.datasets.html  proteinworkshop.features.html  proteinworkshop.metrics.html  proteinworkshop.models.html  proteinworkshop.tasks.html  proteinworkshop.train.html  proteinworkshop.types.html  proteinworkshop.utils.html  src.datasets.html  src.features.html  src.metrics.html  src.models.html  src.tasks.html  src.train.html  src.utils.html
neurips_data_2023/: bibliography.bib  main.tex  math_commands.tex  neurips_data_2023.sty
notebooks/: adding_new_dataset_tutorial.ipynb  adding_new_model_tutorial.ipynb  adding_new_task_tutorial.ipynb  attribution.ipynb  customizing_existing_dataset_tutorial.ipynb  model_dev_template.ipynb  seq_dataset_test.ipynb  template.ipynb  test.fasta  training_new_model_tutorial.ipynb
proteinworkshop/: __init__.py  constants.py  embed.py  explain.py  finetune.py  model_io.py  train.py  types.py  validate_config.py  visualise.py
quickstart_component/: download.html  downstream.html  pretrain.html
scripts/: dispatcher.py  download_foldcomp.py  download_pdb_mmtf.py  download_processed_data.py  install_pyg.py
src/: __init__.py  constants.py  embed.py  finetune.py  train.py  validate_config.py
tests/: __init__.py  conftest.py  test_cli.py  test_configs.py  test_env_var.py  test_package_install.py  test_train.py
(+541 files in other folders)
